Removing unused cells

--- a/exercices/lista_02/lista_02.ipynb
+++ b/exercices/lista_02/lista_02.ipynb
@@ -445,14 +445,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6a45c9ec",
-   "metadata": {},
-   "source": [
-    "#### Naive Bayes Gaussiano"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ac1c6ac5",
@@ -630,7 +622,7 @@
     "\n",
     "### Questão 2 a.\n",
     "\n",
-    "Considerando uma validação cruzada em 10 folds, avalie modelos de classi\u001c",
+    "Considerando uma validação cruzada em 10 folds, avalie modelos de classi\u001c\n",
     "\n",
     "\n",
     "cação multiclasse nos dados em questão. Para tanto, use as abordagens abaixo:\n",
@@ -785,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
